Chore: change upload filename to be consistent

--- a/templates/input.html
+++ b/templates/input.html
@@ -2,7 +2,7 @@
 <title>Input Your Data</title>
 <div class="file_input_section">
     <p>
-        <h1>Input your data file</h1>
+        <h1>Input Your Data File or Use Our Sample</h1>
     </p>
 
     <form>
