--- a/templates/input.html
+++ b/templates/input.html
@@ -5,7 +5,7 @@
         <h1>Input Your Data File or Use Our Sample</h1>
     </p>
 
-    <form>
+    <form method = 'POST'>
       <label for="myfile">Select a file:</label>
       <input type="file" id="myfile" name="myfile"><br><br>
       <input type="submit">
